Moving resume information to template

--- a/devops-engineer.tex
+++ b/devops-engineer.tex
@@ -1,6 +1,5 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -113,14 +112,14 @@
 
 \begin{center}
     \textbf{\Huge \scshape Pedro Roa Cuevas} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \small 123-456-7890 $|$ \href{mailto:proacuevas@gmail.com}{\underline{proacuevas@gmail.com}} $|$ 
+    \href{https://www.linkedin.com/in/pedroroac/}{\underline{linkedin.com/in/pedroroac}} $|$
+    \href{https://github.com/Pedroroac}{\underline{github.com/pedroroac}}
 \end{center}
 
 %
 %-----------Profile-----------
-\section{Profile}
+% \section{Profile}
 \small DevOps Engineer with 5+ years of experience optimizing cloud environments, automating infrastructure, 
 and enhancing system reliability. Expertise in Kubernetes, CI/CD pipelines, and cost optimization, with 
 a proven track record of driving efficiency and reducing operational overhead.
@@ -128,12 +127,13 @@ a proven track record of driving efficiency and reducing operational overhead.
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
+ \begin{itemize}[leftmargin=0.10in, label={}]
     \small{\item{
-     \textbf{Cloud \& Infrastructure}{: Kubernetes - Istio/Service Mesh - Google Cloud - Azure - Terraform - Ansible} \\
-     \textbf{CI/CD \& Automation}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Cloud \& Infrastructure}{: Kubernetes, Istio/Service Mesh, Google Cloud, Azure, Terraform, Ansible} \\
+     \textbf{CI/CD \& Automation}{: Git, ArgoCD, GitHub Actions, GitLab CI/CD, Bitbucket Pipelines, Helm, Kustomize} \\
+     \textbf{Monitoring \& Security}{: Datadog, Hashicorp Vault, SonarQube, Snyk, Gatekeeper, Cybersecurity,
+     Incident Response} \\
+     \textbf{Development \& Scripting}{: Bash, Python}
     }}
  \end{itemize}
 
@@ -142,43 +142,51 @@ a proven track record of driving efficiency and reducing operational overhead.
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Senior DevOps Engineer}{Jan 2025 -- Present}
+      {OMERS}{Toronto, ON}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Supported a GitHub repository migration by transitioning CI/CD pipelines to GitHub Actions, integrating automated code scanning for security and compliance, and enhancing development tooling to improve workflow efficiency and reliability.}
       \resumeItemListEnd
       
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
+% --------Multiple Positions Heading------------
+  %  \resumeSubSubheading
+  %   {DevOps Engineer}{Jan 2023 -- Jan 2025}
+  %   \resumeItemListStart
+  %      \resumeItem{Apache Beam}
+  %        {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
+  %   \resumeItemListEnd
 %-------------------------------------------
-
     \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
+      {DevOps Engineer}{Jan 2023 -- Jan 2025}
+      {OMERS}{Toronto, ON}
       \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
+        \resumeItem{Optimized Kubernetes upgrade process, achieving a 50\% reduction in upgrade times, enhancing overall system reliability and deployment speed.}
+        \resumeItem{Fully automated the Kubernetes upgrade process using rollout sequences, upgrade channels, and cloud-based monitoring functions, leading to more consistent and reliable deployments.}
+        % \resumeItem{Deployed comprehensive backup solution for Google Kubernetes Engine (GKE), ensuring high availability and data integrity.}
+        \resumeItem{Scaled Kubernetes cluster capacity to meet growing application demands, significantly improving system performance and resource utilization.}
+        \resumeItem{Achieved up to 50\% compute cost savings through the implementation of Cast AI, optimizing resource allocation and reducing operational expenses.}
+        \resumeItem{Designed and provisioned production-ready Kubernetes clusters, ensuring high availability and optimal performance for mission-critical applications.}
+        \resumeItem{Improved infrastructure security by automating vulnerability scans and redesigning traffic ingress into the Kubernetes cluster, leading to a stronger, more resilient system.}
+        \resumeItem{Automated the certificate renewal process with CertManager, ensuring continuous security without manual intervention.}
+        \resumeItem{Migrated the in-cluster Istio service mesh to a cloud-managed solution, enabling automated upgrades and reducing maintenance overhead.}
+        % \resumeItem{Streamlined the deployment of observability agents on cloud VMs using Ansible.}
     \resumeItemListEnd
 
     \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
+      {DevOps Engineer}{Jun 2022 -- Dec 2022}
+      {Xhinola}{Remote}
       \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
+        \resumeItem{Led the migration of a payments application from Digital Ocean to Google Cloud, including containerizing the frontend, backend, and admin portal in Kubernetes.}
+        \resumeItem{Strengthened cloud security by resolving critical vulnerabilities and implementing best practices.}
+        \resumeItem{Integrated data analytics and visualization services into the infrastructure for better monitoring.}
+      \resumeItemListEnd
+    
+      \resumeSubheading
+      {Network Operations Center Analyst}{Mar 2020 -- Dec 2021}
+      {Kaleyra}{Remote}
+      \resumeItemListStart
+        \resumeItem{Provided technical support to customers, troubleshooting and resolving system issues across enterprise networks.}
+        \resumeItem{Prioritize remediation of issues in a 24 x 7 environment with critical uptime requirements.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -187,32 +195,20 @@ a proven track record of driving efficiency and reducing operational overhead.
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
+      {Postgraduate Certificate, Cybersecurity}{Ontario, CA}
+      {Loyalist College School of Applied Sciences, Skills, and Technology}{2022 -- 2023}
     \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {Bachelor's Degree, Telematics Engineering}{Santo Domingo, DR}
+      {Pontificia Universidad Católica Madre y Maestra (PUCMM)}{2016 -- 2019}
   \resumeSubHeadingListEnd
 
 %-----------CERTIFICATIONS-----------
 \section{Certifications}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-          \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
+          {\textbf{\href{https://www.credly.com/badges/20f3fe7f-c039-4334-9a88-639dea316962?source=linked_in_profile}{CKA: Certified Kubernetes Administrator}}}{2022 -- 2025}
       \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
+          {\textbf{\href{https://www.credly.com/badges/93cb6253-339f-4468-b5e8-a77ede695361?source=linked_in_profile}{LFCS: Linux Foundation Certified Systems Administrator}}}{2021 -- 2024}
     \resumeSubHeadingListEnd
 
 
